# jedai-doping-hafiza

./: JedAI_2.ipynb  README.md  pyproject.toml  random_forest_model.pkl  streamlit_app.py  stres.csv
jedai/: main.py
